# email_client

./: .gitignore  Accounts.example.toml  Cargo.toml
src/: accounts.rs  main.rs  types.rs
src/providers/: imap.rs
src/public/: index.css  index.html  old.html
src/templates/: formatted_time.html  homepage.html  message_preview.html
