[package]
name = "email_thing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imap = "2.4.1"
native-tls = "0.2"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
mailparse = "0.13"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
tera = "1"